Create information section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
                 <div class="header-image">This is a place holder for an image</div>
             </div>
         </div>
+
+        <div class="information">
+            <div class="info-header-text">Some random information</div>
+            <div class="info-container">
+                <div class="info-group">
+                    <div class="info-image"></div>
+                    <div class="info-text">this is some subtest under and illustration or image</div>
+                </div>
+                <div class="info-group">
+                    <div class="info-image"></div>
+                    <div class="info-text">this is some subtest under and illustration or image</div>
+                </div>
+                <div class="info-group">
+                    <div class="info-image"></div>
+                    <div class="info-text">this is some subtest under and illustration or image</div>
+                </div>
+                <div class="info-group">
+                    <div class="info-image"></div>
+                    <div class="info-text">this is some subtest under and illustration or image</div>
+                </div>
+            </div>
+        </div>
+
     </body>
 
 </html>
