Layout and style qoute section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <div class="header">
+        <div class="header-section">
             <div class="header-nav">
                 <div class="header-logo">Header Logo</div>
                 <div class="header-links">
@@ -26,25 +26,32 @@
             </div>
         </div>
 
-        <div class="information">
+        <div class="information-section">
             <div class="info-header-text">Some random information</div>
             <div class="info-container">
                 <div class="info-group">
                     <div class="info-image"></div>
-                    <div class="info-text">this is some subtest under and illustration or image</div>
+                    <div class="info-text">this is some subtext under and illustration or image</div>
                 </div>
                 <div class="info-group">
                     <div class="info-image"></div>
-                    <div class="info-text">this is some subtest under and illustration or image</div>
+                    <div class="info-text">this is some subtext under and illustration or image</div>
                 </div>
                 <div class="info-group">
                     <div class="info-image"></div>
-                    <div class="info-text">this is some subtest under and illustration or image</div>
+                    <div class="info-text">this is some subtext under and illustration or image</div>
                 </div>
                 <div class="info-group">
                     <div class="info-image"></div>
-                    <div class="info-text">this is some subtest under and illustration or image</div>
+                    <div class="info-text">this is some subtext under and illustration or image</div>
                 </div>
+            </div>
+        </div>
+
+        <div class="qoute-section">
+            <div class="qoute-container">
+                <div class="qoute-text"> This is an inspiring qoute, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="qoute-signature">-Thor, God of Thunder</div>
             </div>
         </div>
 
