Create call to action section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
             </div>
         </div>
 
+        <div class="cta-section">
+            <div class="cta-box">
+                <div class="cta-left">
+                    <div class="cta-title">Call to action! It's time!</div>
+                    <div class="cta-text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="cta-button">Sign up</button>
+            </div>
+        </div>
+
     </body>
 
 </html>
