Add copyright section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             </div>
         </div>
 
+        <div class="footer-section">
+            <div class="footer-text">Copyright @ Some Copyright Text</div>
+        </div>
+
     </body>
 
 </html>
