Adjust header section alignment

--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     </head>
 
     <body>
+        
         <div class="header-section">
-            <div class="header-nav">
+            <div class="header-left">
                 <div class="header-logo">Header Logo</div>
-                <div class="header-links">
-                    <a class="header-link" href="">header link one</a>
-                    <a class="header-link" href="">header line two</a>
-                    <a class="header-link" href="">header link three</a>
-                </div>
-            </div>
-            <div class="header-content">
-                <div class="header-container">
+                <div class="header-content">
                     <div class="header-title">This website is awesome</div>
-                    <div class="header-text">This website has some subtext that goes here under the main title. It's a similar font and the color is lower contrast</div>
+                    <div class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                     <button class="header-button">Sign Up</button>
                 </div>
-                <div class="header-image">This is a place holder for an image</div>
+            </div>
+            <div class="header-right">
+                <div class="header-nav">
+                    <a class="header-link" href="">header link one</a>
+                    <a class="header-link" href="">header link two</a>
+                    <a class="header-link" href="">header link three</a>
+                </div>
+                <div class="header-image">this is a placeholder for an image</div>
             </div>
         </div>
-
+        
         <div class="information-section">
             <div class="info-header-text">Some random information</div>
             <div class="info-container">
